# mpp_test

./: .gitignore
code/src/: CMakeLists.txt  main.cpp  push_stream.cpp  push_stream.h
code/src/PlayMipiCamera/: CMakeLists.txt  main.cpp  play_mipi_camera.cpp  play_mipi_camera.h
code/src/common/: UdpClient.cpp  UdpClient.h  sample_comm_sys.c  sample_comm_venc.c  sample_comm_vi.c
code/src/hisi_common/: sample_comm_isp.c
code/src/test/: CMakeLists.txt  main.cpp
doc/: cache说明.md  markdown学习.md  概念.md  海思mpp学习（2）：MMZ内存.md  海思mpp学习（4）：mpp各模块介绍.md  海思mpp学习（5）：通过mipi接入视频并编码成H264.md  海思mpp学习（一）：基础环境搭建.md  海思mpp学习（三）：视频缓存池-vb.md  海思mpp学习（二）：MMZ内存.md  疑问.md
